A few more changes

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
       <li>Hired and managed a team of 10 engineers</li>
       <li>Raised over $3M in venture capital funding, and led product, engineering, and go-to-market efforts</li>
     </ul>
-    <p>I've worked on several open-source projects in areas such as AI agentic software, OCR models, edge/mobile model deployment, distillation, and model evaluation. My open-source AI applications can be found <a href="/projects">here</a>.</p>
-    <p>I did a Master's in Computer Science at Stanford University, focused on Natural Language Processing and Understanding. I worked closely with Chris Manning and served as a teaching assistant for two of his classes — CS224N (Natural Language Processing with Deep Learning) and CS276 (Information Retrieval and Web Search).</p>
-    <p>Before that, I was a consultant at McKinsey & Company, working with tech companies on innovation strategy. I also hold a B.A. in Economics and an M.S. in Management Science and Engineering, both from Stanford University.</p>
+    <p>I've worked on several open-source projects in areas such as AI agentic systems, Model Context Protocol (MCP), optical character recognition (OCR) models, on-device inference for edge and mobile deployment, model evaluation, and knowledge distillation. I'm particularly interested in designing AI systems that are modular, reliable, and production-ready. A selection of my open-source AI applications can be found <a href="/projects">here</a>.</p>
+    <p>I completed an M.S. in Computer Science at Stanford University, with a focus on Artificial Intelligence, specializing in Natural Language Processing and Understanding. I worked closely with <a href="https://nlp.stanford.edu/~manning/" target="_blank">Chris Manning</a> and served as a teaching assistant for two of his courses — <a href="https://web.stanford.edu/class/archive/cs/cs224n/cs224n.1204/" target="_blank">CS224N</a> (Natural Language Processing with Deep Learning) and <a href="https://web.stanford.edu/class/cs276/" target="_blank">CS276</a> (Information Retrieval and Web Search). In CS276, I also had the opportunity to collaborate with Pandu Nayak, VP of Search at Google.</p>
+    <p>Before that, I was a consultant at McKinsey & Company, where I worked on large-scale technology M&A and operational transformation initiatives for technology and telecom clients. I also hold a B.A. in Economics and an M.S. in Management Science & Engineering, both from Stanford University.</p>
   </div>
 
 <!-- Projects section moved to /projects/index.html -->
