--- a/other/index.html
+++ b/other/index.html
@@ -108,6 +108,10 @@
   <div id="other" class="tab-content">
     <p><strong>🧠 Interests:</strong> My other interests include Linguistics, Psephology (Election Analysis), Cartography, Skiing, Swimming, Tennis, and Road Biking. I've done several multi-day road bike tours (SF to LA, Oregon Coast, Vancouver Island). </p>
 
+    <p>I created <a href="https://threefortythree.ca" target="_blank">ThreeFortyThree Canada</a>, a seat-by-seat election forecasting platform for Canadian federal elections. It uses multivariate modeling and Monte Carlo simulation to translate national and regional polling into seat-level projections across all 343 electoral districts in Canada. I also created <a href="https://github.com/rohan-sampath/india-constituencies-game" target="_blank">Guess the Constituency</a> - a game for the Indian General Election, 2024.</p>
+
+    <p><strong>🎙️ Podcast:</strong> I hosted the <a href="https://open.spotify.com/show/7uTvcZ0wzAWS647bNCgNIh" target="_blank">AIs Wide Open Podcast</a>, where I spoke with CEOs and executives about how they're deploying AI in their businesses, as well as with academics on emerging trends in AI. Past guests include the CEOs of <a href="https://www.g2.com" target="_blank">G2</a>, <a href="https://www.pandadoc.com" target="_blank">PandaDoc</a>, <a href="https://www.people.ai" target="_blank">People.ai</a>, and <a href="https://www.degreed.com" target="_blank">Degreed</a> — all companies with $1B+ valuations. As of May 2025, the podcast has been downloaded 25,000+ times. </p>
+
     <p>🌍 I'm a <a href="https://en.wikipedia.org/wiki/Third_culture_kid" target="_blank">Third Culture Individual</a> — I've lived in 4 countries (US, Canada, UAE, and India), and speak 4 languages (English, Hindi, Tamil, and Arabic).</p>
   </div>
 
